--- a/example/app/app.component.html
+++ b/example/app/app.component.html
@@ -1,3 +1,4 @@
-<div style="padding-left:100px; padding-bottom: 200px">
-  <supre-perfect-scrollbar></supre-perfect-scrollbar>
+<div class="container" suprePerfectScrollbar>
+  <div class="content">
+  </div>
 </div>
